--- a/TerrarianWeaponry.csproj
+++ b/TerrarianWeaponry.csproj
@@ -13,4 +13,5 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 </Project>
